# MT-PSO-Talk

./: .gitignore  .gitmodules  AGENTS.md  PSO分享.pptx  README.md  package.json
BenchmarkApp/: .gitignore  CMakeLists.txt  README.md
BenchmarkApp/Test/: README.md
BenchmarkApp/Test/Compression/: baseline_manifest.cpp  baseline_manifest.h
BenchmarkApp/Test/Compression/tests/: decompression_replay_test.cpp
BenchmarkApp/Test/Graphics/mesa/: mesa_stage_collector.h
BenchmarkApp/Test/Graphics/native/: native_backend_stub.h
BenchmarkApp/Test/Graphics/tests/: graphics_backend_test.cpp
BenchmarkApp/Test/Platform/ios/: CMakeLists.txt
BenchmarkApp/Test/Results/exporters/: csv_exporter.h  json_exporter.cpp
BenchmarkApp/Test/Results/schema/: result_json.cpp  result_types.h
BenchmarkApp/Test/Results/tests/: exporter_test.cpp
BenchmarkApp/Test/Runner/: benchmark_case.h
BenchmarkApp/Test/Shaders/tests/: shader_workload_test.cpp
BenchmarkApp/Test/TestSupport/: assert.h
BenchmarkApp/lib/: CMakeLists.txt
BenchmarkApp/lib/compression/: baseline_manifest.cpp  baseline_manifest.h  compression_benchmark.cpp  compression_benchmark.h  compression_job.cpp  compression_job.h  decompression_replay.cpp  decompression_replay.h  payload_generator.cpp  payload_generator.h
BenchmarkApp/lib/compression/algorithms/: brotli_algorithm.cpp  compression_algorithm.h  deflate_lite_algorithm.cpp  dictionary_algorithm.cpp  hash_util.cpp  lz4_algorithm.cpp  lzma_algorithm.cpp  noop_algorithm.cpp  oodle_algorithm.cpp  rle_algorithm.cpp  snappy_algorithm.cpp  zlib_algorithm.cpp  zstd_algorithm.cpp
BenchmarkApp/lib/driver/: graphics_benchmark.cpp  graphics_benchmark.h
BenchmarkApp/lib/driver/common/: apple_device_lookup.cpp  apple_device_lookup.h  backend_factory.cpp  device_info.cpp  device_info.h  graphics_backend.h  graphics_registry.h  timing_model.cpp  timing_model.h
BenchmarkApp/lib/driver/mesa/: mesa_env_setup.cpp  mesa_env_setup.h  mesa_opengl_backend.cpp  mesa_opengl_backend.h  mesa_stage_collector.h  mesa_trace_event.h  mesa_trace_parser.cpp  mesa_trace_parser.h  mesa_vulkan_backend.cpp  mesa_vulkan_backend.h
BenchmarkApp/lib/driver/metal/: metal_backend.h  metal_backend.mm  metal_context.h  metal_context.mm  metal_pipeline.h  metal_pipeline.mm
BenchmarkApp/lib/driver/native/: metal_backend.cpp  metal_backend.h  native_backend_stub.cpp  native_backend_stub.h  native_opengl_backend.cpp  native_opengl_backend.h  native_vulkan_backend.cpp  native_vulkan_backend.h
BenchmarkApp/lib/driver/opengl/: egl_context.cpp  egl_context.h  gl_program.cpp  gl_program.h  opengl_backend.cpp  opengl_backend.h
BenchmarkApp/lib/driver/vulkan/: vulkan_backend.cpp  vulkan_backend.h  vulkan_context.cpp  vulkan_context.h  vulkan_pipeline.cpp  vulkan_pipeline.h
BenchmarkApp/lib/framework/: registry.h
BenchmarkApp/lib/orchestrator/: benchmark_main.cpp  benchmark_orchestrator.cpp  benchmark_orchestrator.h
BenchmarkApp/lib/results/exporters/: csv_exporter.cpp  csv_exporter.h  json_exporter.cpp  json_exporter.h
BenchmarkApp/lib/results/schema/: result_json.cpp  result_json.h  result_types.cpp  result_types.h
BenchmarkApp/lib/runner/: benchmark_case.h  benchmark_runner.cpp  benchmark_runner.h
BenchmarkApp/lib/shaders/: shader_loader.cpp  shader_loader.h
BenchmarkApp/lib/shaders/manifests/: shader_workload.cpp  (+1 more)
BenchmarkApp/platform/: CMakeLists.txt
BenchmarkApp/platform/android/: AndroidManifest.xml  CMakeLists.txt  MainActivity.kt  android_ndk_utils.sh  benchmark_cli.cpp  build_android.sh  run_benchmark.ps1  run_benchmark.sh  setup_android_sdk.sh
BenchmarkApp/platform/common/: build_settings.sh  result_bundle.sh
BenchmarkApp/platform/ios/: AppDelegate.mm  CMakeLists.txt  Info.plist  benchmark_app.mm  build_ios.sh  ios_device_utils.sh  package_ios_ipa.sh  run_benchmark.ps1  run_benchmark.sh
BenchmarkApp/platform/macos/: build_macos.sh  run_benchmark.sh
BenchmarkApp/platform/release/: assemble_release.sh
BenchmarkApp/platform/windows/: CMakeLists.txt  benchmark_cli.cpp  build_windows.ps1  run_benchmark.ps1
BenchmarkApp/tests/: CMakeLists.txt
BenchmarkApp/tests/compression/: baseline_manifest_test.cpp  compression_algorithm_test.cpp  compression_benchmark_test.cpp  decompression_replay_test.cpp
BenchmarkApp/tests/driver/: device_info_test.cpp  graphics_backend_test.cpp  graphics_benchmark_test.cpp  mesa_trace_parser_test.cpp  timing_model_test.cpp
BenchmarkApp/tests/orchestrator/: orchestrator_test.cpp
BenchmarkApp/tests/platform/: android_ndk_utils_test.sh  build_settings_test.sh  cmake_default_build_type_test.sh  ios_autorun_source_test.sh  ios_configuration_path_test.sh  ios_device_metadata_source_test.sh  ios_device_utils_test.sh  ios_simulator_bundle_metadata_test.sh  macos_build_script_test.sh  release_assembly_test.sh  release_assembly_windows_multiconfig_test.sh  result_bundle_test.sh
BenchmarkApp/tests/results/: exporter_test.cpp  result_json_test.cpp
BenchmarkApp/tests/runner/: benchmark_runner_test.cpp
BenchmarkApp/tests/shaders/: shader_workload_test.cpp
BenchmarkApp/tests/test_support/: assert.h  test_main.cpp
BenchmarkApp/tools/: CMakeLists.txt  mac_benchmark.cpp  mac_benchmark_metal.mm
PSO-compile-test/: CMakeLists.txt
PSO-compile-test/Test/: CMakeLists.txt
PSO-compile-test/Test/Compression/: compression_job.cpp  compression_job.h  decompression_replay.cpp  decompression_replay.h
PSO-compile-test/Test/Runner/: benchmark_runner.cpp  benchmark_runner.h
PSO-compile-test/Test/TestSupport/: test_main.cpp
ShaderCompileTest/: CMakeLists.txt  build.bat  build_android.bat  run.bat  run_all.bat
ShaderCompileTest/android/: gradlew.bat  settings.gradle
ShaderCompileTest/android/app/: build.gradle
ShaderCompileTest/results/: android_colorwrite_result.txt  colorwrite_test.txt  fixed100.txt  quick_test.txt
ShaderCompileTest/shaders/: baseline.frag  baseline.vert  baseline_gl.frag  baseline_gl.vert  heavy.frag  heavy.vert  heavy_gl.frag  heavy_gl.vert
ShaderCompileTest/src/: benchmark.h  main.cpp  opengl_test.cpp  utils.cpp  vulkan_test.cpp
(+443 files in other folders)
